--- a/src/app/tela-reservas/tela-reservas.component.html
+++ b/src/app/tela-reservas/tela-reservas.component.html
@@ -8,7 +8,9 @@
     <button mat-raised-button (click)="seeData()" class="demo-button">
       VER RESERVAS
     </button>
-    <!-- <br>
-    <button mat-raised-button (click)="permissionData()" class="demo-button">PERMISSÃO DE RESERVAS</button> -->
+    <br />
+    <button mat-raised-button (click)="permissionData()" class="demo-button">
+      PERMISSÃO DE RESERVAS
+    </button>
   </div>
 </div>
