--- a/src/app/tela-turmas/tela-novas-turmas/tela-novas-turmas.component.html
+++ b/src/app/tela-turmas/tela-novas-turmas/tela-novas-turmas.component.html
@@ -72,6 +72,7 @@
         <mat-label>Periodo:</mat-label>
         <mat-select formControlName="periodo">
           <mat-option value="matutino">Matutino</mat-option>
+          <mat-option value="vespertino">Vespertino</mat-option>
           <mat-option value="noturno">Noturno</mat-option>
         </mat-select>
       </mat-form-field>
