--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.html
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.html
@@ -26,7 +26,7 @@
 </mat-toolbar>
 
 <div class="container-reservas-feitas">
-  <form class="formByProf"  [formGroup]="searchForm" (ngSubmit)="search()">
+  <form class="formByProf" [formGroup]="searchForm" (ngSubmit)="search()">
     <mat-form-field>
       <mat-label>Informe o Curso:</mat-label>
       <mat-select
@@ -34,51 +34,118 @@
         (valueChange)="changeCourse($event)"
         formControlName="curso"
       >
-        @for (course of cursoList; track course) {
-        <mat-option [value]="course.curso_id">{{ course.nome }}</mat-option>
-        } @empty {
-        <mat-option [value]="">Sem dados</mat-option>
-        }
+        <mat-option *ngFor="let course of cursoList" [value]="course.curso_id">
+          {{ course.nome }}
+        </mat-option>
+        <mat-option *ngIf="cursoList.length == 0" [value]=""
+          >Sem dados</mat-option
+        >
       </mat-select>
     </mat-form-field>
 
     <mat-form-field *ngIf="disciplinaList.length > 0">
-      <mat-label>Informe a Matéria:</mat-label>
+      <mat-label>Informe a disciplina:</mat-label>
       <mat-select
-        (valueChange)="changeClass($event)"
+        (valueChange)="changeDisciplina($event)"
         formControlName="disciplina"
       >
-        @for (class of disciplinaList; track class) {
-        <mat-option [value]="class.disciplina_id">{{
-          class.nome
-        }}</mat-option>
-        } @empty {
-        <mat-option [value]="">Sem dados</mat-option>
-        }
+        <mat-option
+          *ngFor="let class of disciplinaList"
+          [value]="class.disciplina_id"
+        >
+          {{ class.nome }}
+        </mat-option>
+        <mat-option *ngIf="disciplinaList.length == 0" [value]=""
+          >Sem dados</mat-option
+        >
       </mat-select>
     </mat-form-field>
 
-    <mat-form-field *ngIf="teacherList.length > 0">
-      <mat-label>Nome do Professor:</mat-label>
+    <mat-form-field *ngIf="teacherList.turmas.length > 0">
+      <mat-label>Periodo e Professor:</mat-label>
       <mat-select
-        formControlName="professor"
+        (valueChange)="changeProfessor($event)"
+        formControlName="turma_id"
       >
-        @for (teacher of teacherList; track teacher) {
-        <mat-option [value]="teacher.professor_id"> {{ teacher.nome }} </mat-option>
-        } @empty {
-        <mat-option [value]="">Sem dados</mat-option>
-        }
+        <mat-option
+          *ngFor="let teacher of teacherList.turmas"
+          [value]="teacher.turma_id"
+        >
+          {{ teacher.professor.nome }} => {{ teacher.periodo }}
+        </mat-option>
+        <mat-option *ngIf="teacherList.turmas.length === 0" [value]="">
+          Sem dados
+        </mat-option>
       </mat-select>
     </mat-form-field>
-    
-    <button
-      type="submit"
-      mat-raised-button
-      class="demo-button"
-    >
-      BUSCAR
-    </button>
+
+    <mat-form-field *ngIf="salaList.length > 0">
+      <mat-label>Sala:</mat-label>
+      <mat-select formControlName="sala">
+        <!-- Filtrando salas para garantir que ident_sala seja único -->
+        <mat-option
+          *ngFor="let sala of getUniqueSalas()"
+          [value]="sala.sala_id"
+        >
+          {{ sala.ident_sala }}
+        </mat-option>
+        <mat-option *ngIf="salaList.length == 0" [value]=""
+          >Sem dados</mat-option
+        >
+      </mat-select>
+    </mat-form-field>
+
+    <button type="submit" mat-raised-button class="demo-button">BUSCAR</button>
   </form>
 </div>
 
+<div class="reserva-layout">
+  <mat-card class="reserva-card" *ngIf="resultadoEncontrado">
+    <mat-card-header>
+      <mat-card-title>Info da Reserva</mat-card-title>
+      <mat-card-subtitle> Reserva(s) ID: {{ reservaIds }} </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-divider></mat-divider>
+      <div class="turma-info">
+        <p><strong>Turma:</strong> {{ reservas[0]?.turma?.periodo }}</p>
+        <p><strong>Disciplina:</strong> {{ turmaAchada?.disciplina?.nome }}</p>
+        <p><strong>Curso:</strong> {{ disciplinaAchada?.curso?.nome }}</p>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="professor-info">
+        <p><strong>Professor:</strong> {{ reservas[0]?.professor?.nome }}</p>
+        <p><strong>Email:</strong> {{ reservas[0]?.professor?.email }}</p>
+        <p><strong>Registro:</strong> {{ reservas[0]?.professor?.registro }}</p>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="sala-info">
+        <p><strong>Sala:</strong> {{ reservas[0]?.sala?.ident_sala }}</p>
+        <p>
+          <strong>Nº de cadeiras:</strong> {{ reservas[0]?.sala?.num_cadeiras }}
+        </p>
+        <p>
+          <strong>Nº de computadores:</strong>
+          {{ reservas[0]?.sala?.num_computadores }}
+        </p>
+        <p>
+          <strong>Nº de lousas:</strong> {{ reservas[0]?.sala?.num_lousas }}
+        </p>
+        <p><strong>Nº de mesas:</strong> {{ reservas[0]?.sala?.num_mesas }}</p>
+        <p>
+          <strong>Nº de projetores:</strong>
+          {{ reservas[0]?.sala?.num_projetores }}
+        </p>
+      </div>
+    </mat-card-content>
+  </mat-card>
 
+  <mat-card class="lista-horarios" *ngIf="resultadoEncontrado">
+    <mat-card-title>Histórico de reservas</mat-card-title>
+    <mat-card-content>
+      <ul class="dias-reservados">
+        <li *ngFor="let horario of horariosString">{{ horario }}</li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+</div>
