--- a/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.html
+++ b/src/app/tela-reservas/tela-permissao-reservas/tela-permissao-reservas.component.html
@@ -1,10 +1,8 @@
 <mat-toolbar>
-  <!-- Botão para voltar para a página anterior -->
   <button mat-icon-button (click)="goBack()">
     <mat-icon>home</mat-icon>
   </button>
 
-  <!-- Botão do menu existente -->
   <button mat-icon-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
@@ -25,127 +23,115 @@
   <img src="assets/images/ifsp.logo.png" class="logo" />
 </mat-toolbar>
 
-<div class="container-reservas-feitas">
-  <form class="formByProf" [formGroup]="searchForm" (ngSubmit)="search()">
-    <mat-form-field>
-      <mat-label>Informe o Curso:</mat-label>
-      <mat-select
-        [disabled]="cursoList.length == 0"
-        (valueChange)="changeCourse($event)"
-        formControlName="curso"
-      >
-        <mat-option *ngFor="let course of cursoList" [value]="course.curso_id">
-          {{ course.nome }}
-        </mat-option>
-        <mat-option *ngIf="cursoList.length == 0" [value]=""
-          >Sem dados</mat-option
-        >
-      </mat-select>
-    </mat-form-field>
+<div class="table-container">
+  <mat-form-field [formGroup]="form">
+    <mat-label>Filtro por palavras chaves</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ex: SOPA2"
+      #input
+    />
+  </mat-form-field>
 
-    <mat-form-field *ngIf="disciplinaList.length > 0">
-      <mat-label>Informe a disciplina:</mat-label>
-      <mat-select
-        (valueChange)="changeDisciplina($event)"
-        formControlName="disciplina"
-      >
-        <mat-option
-          *ngFor="let class of disciplinaList"
-          [value]="class.disciplina_id"
-        >
-          {{ class.nome }}
-        </mat-option>
-        <mat-option *ngIf="disciplinaList.length == 0" [value]=""
-          >Sem dados</mat-option
-        >
-      </mat-select>
-    </mat-form-field>
+  <div class="mat-elevation-z4">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <ng-container matColumnDef="rejeitar">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox
+            (change)="$event ? toggleAllRowsReject() : null"
+            [checked]="selectionReject.hasValue() && isAllRejectSelected()"
+            [indeterminate]="
+              selectionReject.hasValue() && !isAllRejectSelected()
+            "
+          >
+            Selecionar Rejeitar
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selectionReject.toggle(row) : null"
+            [checked]="selectionReject.isSelected(row)"
+          ></mat-checkbox>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="aprovar">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          Selecionar Aprovar
+        </th>
+        <td class="select" mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)"
+            [disabled]="
+              selection.selected.length > 0 ? !selection.isSelected(row) : false
+            "
+          ></mat-checkbox>
+        </td>
+      </ng-container>
 
-    <mat-form-field *ngIf="teacherList.turmas.length > 0">
-      <mat-label>Periodo e Professor:</mat-label>
-      <mat-select
-        (valueChange)="changeProfessor($event)"
-        formControlName="turma_id"
-      >
-        <mat-option
-          *ngFor="let teacher of teacherList.turmas"
-          [value]="teacher.turma_id"
-        >
-          {{ teacher.professor.nome }} => {{ teacher.periodo }}
-        </mat-option>
-        <mat-option *ngIf="teacherList.turmas.length === 0" [value]="">
-          Sem dados
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+      <ng-container matColumnDef="professor">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Professor</th>
+        <td mat-cell *matCellDef="let row">{{ row.professor.nome }}</td>
+      </ng-container>
+      <ng-container matColumnDef="sala">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Sala</th>
+        <td mat-cell *matCellDef="let row">{{ row.sala.ident_sala }}</td>
+      </ng-container>
+      <ng-container matColumnDef="periodo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Periodo</th>
+        <td mat-cell *matCellDef="let row">{{ row.turma.periodo }}</td>
+      </ng-container>
+      <ng-container matColumnDef="hora_inicio">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Hora/inicio</th>
+        <td mat-cell *matCellDef="let row">{{ row.hora_inicio }}</td>
+      </ng-container>
+      <ng-container matColumnDef="hora_final">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Hora/final</th>
+        <td mat-cell *matCellDef="let row">{{ row.hora_final }}</td>
+      </ng-container>
+      <ng-container matColumnDef="dias_reservados">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Dias</th>
+        <td mat-cell *matCellDef="let row">
+          <ul class="dias-list">
+            <li *ngFor="let dias of row.dias_reservados">{{ dias }}</li>
+          </ul>
+        </td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-    <mat-form-field *ngIf="salaList.length > 0">
-      <mat-label>Sala:</mat-label>
-      <mat-select formControlName="sala">
-        <!-- Filtrando salas para garantir que ident_sala seja único -->
-        <mat-option
-          *ngFor="let sala of getUniqueSalas()"
-          [value]="sala.sala_id"
-        >
-          {{ sala.ident_sala }}
-        </mat-option>
-        <mat-option *ngIf="salaList.length == 0" [value]=""
-          >Sem dados</mat-option
-        >
-      </mat-select>
-    </mat-form-field>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          Não foram encontrados dados para: "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
 
-    <button type="submit" mat-raised-button class="demo-button">BUSCAR</button>
-  </form>
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator>
+  </div>
 </div>
+<div class="demo-button-container">
+  <button
+    mat-raised-button
+    [disabled]="selection.selected.length == 0"
+    (click)="aprovarReserva()"
+    class="demo-button"
+  >
+    APROVAR MATÉRIA
+  </button>
 
-<div class="reserva-layout">
-  <mat-card class="reserva-card" *ngIf="resultadoEncontrado">
-    <mat-card-header>
-      <mat-card-title>Info da Reserva</mat-card-title>
-      <mat-card-subtitle> Reserva(s) ID: {{ reservaIds }} </mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <mat-divider></mat-divider>
-      <div class="turma-info">
-        <p><strong>Turma:</strong> {{ reservas[0]?.turma?.periodo }}</p>
-        <p><strong>Disciplina:</strong> {{ turmaAchada?.disciplina?.nome }}</p>
-        <p><strong>Curso:</strong> {{ disciplinaAchada?.curso?.nome }}</p>
-      </div>
-      <mat-divider></mat-divider>
-      <div class="professor-info">
-        <p><strong>Professor:</strong> {{ reservas[0]?.professor?.nome }}</p>
-        <p><strong>Email:</strong> {{ reservas[0]?.professor?.email }}</p>
-        <p><strong>Registro:</strong> {{ reservas[0]?.professor?.registro }}</p>
-      </div>
-      <mat-divider></mat-divider>
-      <div class="sala-info">
-        <p><strong>Sala:</strong> {{ reservas[0]?.sala?.ident_sala }}</p>
-        <p>
-          <strong>Nº de cadeiras:</strong> {{ reservas[0]?.sala?.num_cadeiras }}
-        </p>
-        <p>
-          <strong>Nº de computadores:</strong>
-          {{ reservas[0]?.sala?.num_computadores }}
-        </p>
-        <p>
-          <strong>Nº de lousas:</strong> {{ reservas[0]?.sala?.num_lousas }}
-        </p>
-        <p><strong>Nº de mesas:</strong> {{ reservas[0]?.sala?.num_mesas }}</p>
-        <p>
-          <strong>Nº de projetores:</strong>
-          {{ reservas[0]?.sala?.num_projetores }}
-        </p>
-      </div>
-    </mat-card-content>
-  </mat-card>
-
-  <mat-card class="lista-horarios" *ngIf="resultadoEncontrado">
-    <mat-card-title>Histórico de reservas</mat-card-title>
-    <mat-card-content>
-      <ul class="dias-reservados">
-        <li *ngFor="let horario of horariosString">{{ horario }}</li>
-      </ul>
-    </mat-card-content>
-  </mat-card>
+  <button
+    mat-raised-button
+    [disabled]="selectionReject.selected.length < 1"
+    (click)="apagarReservas()"
+    class="demo-button"
+  >
+    EXCLUIR MATÉRIA
+  </button>
 </div>
