--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
@@ -1,19 +1,3 @@
-.container-reservas-feitas {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #dcdee2;
-  padding: 2%;
-}
-
-.formByProf {
-  display: flex;
-  align-items: start;
-  justify-content: space-evenly;
-  width: 80%;
-  height: 58px;
-}
-
 .example-spacer {
   flex: 1 1 auto;
 }
@@ -36,12 +20,6 @@
 .tituloH {
   font-size: 2em;
   font-family: Copperplate, Copperplate Gothic Light, fantasy;
-}
-
-h4 {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  color: black;
-  text-align: center;
 }
 
 mat-card {
@@ -129,4 +107,25 @@ mat-card-title {
   border-radius: 5px;
   margin: 5px 0;
   text-align: center;
+}
+.container-reservas-feitas {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: #dcdee2;
+  padding: 2%;
+}
+
+h4 {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: red;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.formByProf {
+  display: flex;
+  align-items: start;
+  justify-content: space-evenly;
+  width: 80%;
 }
