solicitação e modificação de meus interesses pronto

--- a/src/app/role-student/tela-home-student/tela-home-student.component.html
+++ b/src/app/role-student/tela-home-student/tela-home-student.component.html
@@ -40,6 +40,18 @@
               </button>
             </mat-card-actions>
           </mat-card>
+          <mat-card class="card-width">
+            <mat-card-header>
+              <mat-card-title class="title-card"
+                >Meus interesse em turma</mat-card-title
+              >
+            </mat-card-header>
+            <mat-card-actions>
+              <button (click)="redirectMeusInteresses()" mat-button>
+                Selecionar
+              </button>
+            </mat-card-actions>
+          </mat-card>
         </div>
       </div>
     </div>
