--- a/src/app/interesses/meus-interesses/meus-interesses.component.html
+++ b/src/app/interesses/meus-interesses/meus-interesses.component.html
@@ -75,12 +75,12 @@
       <ng-container matColumnDef="curso">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Curso</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.curso }}
+          {{ row.disciplina.curso.nome }}
         </td>
       </ng-container>
       <ng-container matColumnDef="disciplina">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Disciplina</th>
-        <td mat-cell *matCellDef="let row">{{ row.disciplina }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.disciplina.nome }}</td>
       </ng-container>
 
       <ng-container matColumnDef="periodo">
@@ -90,13 +90,12 @@
 
       <ng-container matColumnDef="professor">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Professor</th>
-        <td mat-cell *matCellDef="let row">{{ row.professor }}</td>
+        <td mat-cell *matCellDef="let row">{{ row.professor.nome }}</td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-      <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">
           Não foram encontrados dados para: "{{ input.value }}"
