--- a/src/app/interesses/validar-interesse/validar-interesse.component.html
+++ b/src/app/interesses/validar-interesse/validar-interesse.component.html
@@ -1,1 +1,138 @@
-<p>validar-interesse works!</p>
+<mat-toolbar>
+  <button mat-icon-button (click)="goBack()">
+    <mat-icon>home</mat-icon>
+  </button>
+
+  <button mat-icon-button [matMenuTriggerFor]="menu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button (click)="redirectProfile()" mat-menu-item>
+      <mat-icon>account_circle</mat-icon>
+      <span>Perfil</span>
+    </button>
+  </mat-menu>
+
+  <span class="tituloH">HEIMDALL</span>
+
+  <span class="spacer"></span>
+
+  <button mat-icon-button (click)="logout()">
+    <mat-icon>logout</mat-icon>
+  </button>
+  <img src="assets/images/ifsp.logo.png" class="logo" />
+</mat-toolbar>
+
+<div class="container-table">
+  <mat-form-field>
+    <mat-label>Filtro por palavras chaves</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Ex: SP000000"
+      #input
+    />
+  </mat-form-field>
+
+  <div class="mat-elevation-z4">
+    <table mat-table [dataSource]="dataSource" matSort>
+      <!-- Checkbox Column -->
+      <ng-container matColumnDef="APROVE">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox
+            (change)="$event ? toggleAllRowsAprove() : null"
+            [checked]="selectionAprove.hasValue() && isAllAproveSelected()"
+            [indeterminate]="
+              selectionAprove.hasValue() && !isAllAproveSelected()
+            "
+            [disabled]="validateAllSelected(selectionReject)"
+          ></mat-checkbox>
+          Aprovar
+        </th>
+        <td class="select" mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selectionAprove.toggle(row) : null"
+            [checked]="selectionAprove.isSelected(row)"
+            [disabled]="selectionReject.isSelected(row)"
+          ></mat-checkbox>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="REJEITE">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox
+            (change)="$event ? toggleAllRowsReject() : null"
+            [checked]="selectionReject.hasValue() && isAllRejectSelected()"
+            [indeterminate]="
+              selectionReject.hasValue() && !isAllRejectSelected()
+            "
+            [disabled]="validateAllSelected(selectionAprove)"
+          ></mat-checkbox>
+          Rejeitar
+        </th>
+        <td class="select" mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selectionReject.toggle(row) : null"
+            [checked]="selectionReject.isSelected(row)"
+            [disabled]="selectionAprove.isSelected(row)"
+          ></mat-checkbox>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="curso">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Curso</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.disciplina.curso.nome }}
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="disciplina">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Disciplina</th>
+        <td mat-cell *matCellDef="let row">{{ row.disciplina.nome }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="periodo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Periodo</th>
+        <td mat-cell *matCellDef="let row">{{ row.periodo }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="professor">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Professor</th>
+        <td mat-cell *matCellDef="let row">{{ row.professor.nome }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="aluno">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Aluno</th>
+        <td mat-cell *matCellDef="let row">{{ row.aluno.nome }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">
+          Não foram encontrados dados para: "{{ input.value }}"
+        </td>
+      </tr>
+    </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[5, 10, 25, 100]"
+      aria-label="Select page of users"
+    ></mat-paginator>
+  </div>
+
+  <div class="buttons">
+    <button
+      [disabled]="
+        selectionAprove.selected.length == 0 &&
+        selectionReject.selected.length == 0
+      "
+      mat-flat-button
+      color="primary"
+      (click)="enviarLista()"
+    >
+      Confirmar
+    </button>
+  </div>
+</div>
