--- a/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.scss
+++ b/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.scss
@@ -44,6 +44,10 @@ h4 {
   cursor: pointer;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
+.saveButton:hover {
+  background-color: #1eff00;
+  color: black;
+}
 
 .saveButton:disabled {
   background-color: #5d5d5d;
