permissão reservas completadas

--- a/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
+++ b/src/app/tela-reservas/tela-novas-reservas/tela-novas-reservas.component.html
@@ -38,7 +38,8 @@
           Garanta que existe um curso vinculado a uma disciplina (na aba de "ver
           disciplinas") e que a disciplina esteja vinculado a uma turma (na aba
           "ver turmas"), caso não tenha o vinculo, não aparecerá dados para
-          serem selecionados nos campos abaixos
+          serem selecionados nos campos abaixos. E caso não for um adm,
+          necessário estar vinculado a uma turma
         </h4>
 
         <div class="calendario-personalizado">
