--- a/src/app/tela-turmas/tela-turmas.component.html
+++ b/src/app/tela-turmas/tela-turmas.component.html
@@ -8,5 +8,12 @@
     <button mat-raised-button (click)="seeData()" class="demo-button">
       VER TURMAS
     </button>
+    <button
+      mat-raised-button
+      (click)="redirectMinhasTurmas()"
+      class="demo-button"
+    >
+      MINHAS TURMAS
+    </button>
   </div>
 </div>
