--- a/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
+++ b/src/app/role-adm/tela-home-adm/tela-home-adm.component.html
@@ -7,18 +7,6 @@
       <mat-icon> account_circle </mat-icon>
       <span>Perfil</span>
     </button>
-    <button (click)="redirectValidarInteresse()" mat-menu-item>
-      <mat-icon>thumb_up</mat-icon>
-      <span>Interesse: aluno -> turma</span>
-    </button>
-    <button (click)="redirectValidacaoAlunos()" mat-menu-item>
-      <mat-icon>how_to_reg</mat-icon>
-      <span>Validar Alunos</span>
-    </button>
-    <button (click)="redirectValidacaoProfessores()" mat-menu-item>
-      <mat-icon>fact_check</mat-icon>
-      <span>Validar Professores</span>
-    </button>
     <button (click)="redirectReserve()" mat-menu-item>
       <mat-icon>schedule</mat-icon>
       <span>Reservas</span>
@@ -48,6 +36,46 @@
   <img src="assets/images/ifsp.logo.png" class="logo" />
 </mat-toolbar>
 
+<div class="content">
+  <div class="bloco">
+    <div class="header">
+      <mat-icon>thumb_up</mat-icon>
+      <h2 style="margin-left: 10px">Validações</h2>
+    </div>
+    <div class="container-horizontal">
+      <mat-card class="validaCard card-width">
+        <mat-card-header>
+          <mat-card-title>Validação usuário: professores</mat-card-title>
+        </mat-card-header>
+        <mat-card-actions>
+          <button (click)="redirectValidacaoProfessores()" mat-button>
+            Selecionar
+          </button>
+        </mat-card-actions>
+      </mat-card>
+      <mat-card class="validaCard card-width">
+        <mat-card-header>
+          <mat-card-title>Validação usuário: alunos</mat-card-title>
+        </mat-card-header>
+        <mat-card-actions>
+          <button (click)="redirectValidacaoAlunos()" mat-button>
+            Selecionar
+          </button>
+        </mat-card-actions>
+      </mat-card>
+      <mat-card class="validaCard card-width">
+        <mat-card-header>
+          <mat-card-title>Validar interesse de aluno em turma</mat-card-title>
+        </mat-card-header>
+        <mat-card-actions>
+          <button (click)="redirectValidarInteresse()" mat-button>
+            Selecionar
+          </button>
+        </mat-card-actions>
+      </mat-card>
+    </div>
+  </div>
+</div>
 <div class="blocos-container">
   <div *ngFor="let block of data" class="content">
     <div class="bloco">
