--- a/src/app/role-student/tela-home-student/tela-home-student.component.html
+++ b/src/app/role-student/tela-home-student/tela-home-student.component.html
@@ -23,6 +23,34 @@
   <div class="content">
     <div class="bloco">
       <div class="header">
+        <mat-icon>flash_on</mat-icon>
+        <h2 style="margin-left: 10px">Acesso Rápido</h2>
+      </div>
+      <div class="container">
+        <div class="cards">
+          <mat-card class="card-width">
+            <mat-card-header>
+              <mat-card-title class="title-card">Ver reservas</mat-card-title>
+            </mat-card-header>
+            <mat-card-actions>
+              <button (click)="verReserva()" mat-button>Selecionar</button>
+            </mat-card-actions>
+          </mat-card>
+          <mat-card class="card-width">
+            <mat-card-header>
+              <mat-card-title class="title-card">Minhas turmas</mat-card-title>
+            </mat-card-header>
+            <mat-card-actions>
+              <button (click)="redirectMinhasTurmas()" mat-button>
+                Selecionar
+              </button>
+            </mat-card-actions>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+    <div class="bloco">
+      <div class="header">
         <mat-icon>thumb_up</mat-icon>
         <h2 style="margin-left: 10px">Interesses</h2>
       </div>
@@ -50,24 +78,6 @@
               <button (click)="redirectMeusInteresses()" mat-button>
                 Selecionar
               </button>
-            </mat-card-actions>
-          </mat-card>
-        </div>
-      </div>
-    </div>
-    <div class="bloco">
-      <div class="header">
-        <mat-icon>meeting_room</mat-icon>
-        <h2 style="margin-left: 10px">Reservas</h2>
-      </div>
-      <div class="container">
-        <div class="cards">
-          <mat-card class="card-width">
-            <mat-card-header>
-              <mat-card-title class="title-card">Ver reservas</mat-card-title>
-            </mat-card-header>
-            <mat-card-actions>
-              <button (click)="verReserva()" mat-button>Selecionar</button>
             </mat-card-actions>
           </mat-card>
         </div>
