--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
@@ -129,3 +129,11 @@ h4 {
   justify-content: space-evenly;
   width: 80%;
 }
+
+mat-card {
+  margin: 20px;
+}
+
+.table-content {
+  background: #dcdee2;
+}
