--- a/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
+++ b/src/app/tela-reservas/tela-reservas-feitas/tela-reservas-feitas.component.scss
@@ -137,3 +137,60 @@ mat-card {
 .table-content {
   background: #dcdee2;
 }
+
+.page-title {
+  margin-top: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  color: #1ddd04;
+  text-align: center;
+  margin-bottom: 20px;
+  background-color: black;
+  padding: 20px;
+}
+
+.responsive-schedule {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.day-container {
+  flex: 1 1 200px;
+  background-color: black;
+  border-radius: 8px;
+  padding: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.day-container h3 {
+  color: #1ddd04;
+  text-align: center;
+}
+
+.hour-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 5px 0;
+  border-bottom: 1px solid black;
+}
+
+.hour-container:last-child {
+  border-bottom: none;
+}
+
+.horario {
+  color: #1ddd04;
+  margin-right: 10px;
+}
+
+.reservation {
+  white-space: pre-line;
+  padding: 8px;
+  background-color: #1ddd04;
+  color: black;
+  border-radius: 4px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  text-align: center;
+  flex: 1;
+}
